--- a/main-service/src/main/resources/applciation.properties
+++ b/main-service/src/main/resources/applciation.properties
@@ -1,5 +1,4 @@
 server.port=8080
-stats-server.url=http://localhost:9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
@@ -7,6 +6,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
